<resources>
    <string name="app_name">Mastercom Workbook</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="source_code_url">https://github.com/Stypox/mastercom-workbook</string>
    <string name="report_bug_url">https://github.com/Stypox/mastercom-workbook/issues</string>

    <string name="menu_account_actions_title">Your account</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_marks_actions_title">Manage marks</string>
    <string name="menu_subjects">Subjects</string>
    <string name="menu_marks">Marks</string>
    <string name="menu_statistics">Statistics</string>
    <string name="menu_info_actions_title">App info</string>
    <string name="menu_source_code">Source code</string>
    <string name="menu_report_bug">Report bug</string>

    <string name="type_written">Written</string>
    <string name="type_oral">Oral</string>
    <string name="type_practical">Practical</string>

    <string name="error_malformed_url">Malformed url</string>
    <string name="error_network">Network error</string>
    <string name="error_not_json">Response was not JSON</string>
    <string name="error_unsuitable_json">Unsuitable response JSON</string>
    <string name="error_invalid_credentials">Wrong user or password</string>
    <string name="error_no_marks">No marks</string>
    <string name="error_marks_are_still_loading">Marks are still loading</string>
    <string name="retry">Retry</string>

    <string name="marks_average_title">Marks average</string>
    <string name="term_title">Term:</string>

    <string name="wanted_mark_title">Wanted mark</string>
    <string name="aim_mark_title">Aim mark:</string>
    <string name="remaining_tests_title">Remaining tests:</string>
    <string name="default_remaining_tests">1</string>

    <string name="login_APIUrl">School:</string>
    <string name="login_user">User:</string>
    <string name="login_user_hint">012345</string>
    <string name="login_password">Password:</string>
    <string name="login_login">LOGIN</string>

    <string name="action_sort_by_date">Sort by date</string>
    <string name="action_sort_by_value">Sort by value</string>
    <string name="action_show_marks">Show mark details</string>

    <string name="overall_average_title">Overall average</string>
    <string name="overall_average_mode_title">Display average of:</string>

    <string name="marks_chart_label">Marks</string>
    <string name="no_marks_for_statistics">There are no marks to show in statistics</string>
</resources>
