<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group>
        <item
            android:id="@+id/marksAction"
            android:icon="@drawable/ic_menu_marks"
            android:title="@string/menu_marks"
            android:enabled="false" />
        <item
            android:id="@+id/statisticsAction"
            android:icon="@drawable/ic_menu_statistics"
            android:title="@string/menu_statistics"
            android:enabled="false" />

        <item
            android:id="@+id/documentsAction"
            android:icon="@drawable/ic_menu_documents"
            android:title="@string/menu_documents" />

    </group>

    <item android:title="@string/menu_account_actions_title">
        <menu>
            <item
                android:id="@+id/loginAction"
                android:icon="@drawable/ic_menu_login"
                android:title="@string/menu_logout" />
        </menu>
    </item>

    <item android:title="@string/menu_info_actions_title">
        <menu>
            <item
                android:id="@+id/sourceCodeAction"
                android:icon="@drawable/ic_menu_source_code"
                android:title="@string/menu_source_code" />
            <item
                android:id="@+id/reportBugAction"
                android:icon="@drawable/ic_menu_report_bug"
                android:title="@string/menu_report_bug" />
        </menu>
    </item>
</menu>
